<resources>
    <string name="app_name">宇时4G数传</string>
    <string name="connect">连接服务器</string>
    <string name="disconnect">取消连接</string>
    <string name="uname">用户名</string>
    <string name="choosekey">加载key</string>
    <string name="upw">密码</string>
    <string name="devid">设备ID</string>
    <string name="slaveIndex">从机序号</string>
    <string name="slaveAddr">从机地址</string>
    <string name="devidoruname">设备ID/用户名</string>
    <string name="data">推送的数据</string>
    <string name="pointId">数据点ID</string>
    <string name="pointValue">设置的值</string>
    <string name="subscribefordevid">订阅单个设备</string>
    <string name="subscribe">订阅(数据流)</string>
    <string name="subscribe_parse">订阅(Json)</string>
    <string name="issubscribe">订阅回调标识</string>
    <string name="subscribeforuname">订阅账户下的所有设备</string>
    <string name="dissubscribefordevid">取消订阅单个设备</string>
    <string name="dissubscribeforuname">取消订阅账户下的所有设备</string>
    <string name="publishfordevid">向单个设备推送</string>
    <string name="publishdata">推送数据</string>
    <string name="setdataPoint">设置</string>
    <string name="querydataPoint">查询</string>
    <string name="publish">发布(数据流)</string>
    <string name="publish_parse">发布(Json)</string>
    <string name="publishforuname">向账户下的所有设备推送</string>
    <string name="alertinfo">请输入内容</string>
    <string name="suresubmit">提交操作</string>
    <string name="cleanmsg">清空屏幕</string>
    <string name="cloudRaw">云交换机操作</string>
    <string name="cloudParse">云组态操作</string>
    <string name="privatekey"><RSAKeyValue><Modulus>uOqxIXLFeDL9n1u+yo9LNzRxoV6U04YYenAXIbJ/CAO6wbjBaf9m6Sw9mJXoJr3IA9w6Plw1wgLrBLP0ngW7cFSQVbT/p2zx5NhDLTZ6NeHV+lZNLSFL6niUvDCBIyrims8VG7+FLXqrjBa0YOny5MhCdP2K67lNCBUwlDr+nLs=</Modulus><Exponent>AQAB</Exponent><P>xyscDUZcb7beXz60mUSMtTOuzxSCmqqXlgP1bhGr5RCBSADIeZoy8+k2ILfzTDorlwd9pqSbFBf/W4rVGp6d4w==</P><Q>7a6Gx+flU3M2YJFQ+8qVD08j8vjcoSG3JaSfUB5Z3WE1ZPug36LSjIgZ4EsZQ9mjreVgYkxylkhAwiDfSHG9SQ==</Q><DP>BoM7XJfDaAfDx7uGLkjWjQpOmgjiqGoRoN8qRFohk9DxWUhlRcysA9vJYFKDiyePy1V8X1mclJCgUf79Luym3w==</DP><DQ>vEaFyZDuXd5j8rbp2aqtzQS5y1xLGPCmLZFsCYEhWnYIX8fbtYs7Ecs2BDA5AUBDohqS8Qrxsg3mDmEPvkkq0Q==</DQ><InverseQ>stTU8PLYXfq391Er67p5yfYdsEdnXQBaQESIWAnxUE2QmqRZ00rX3MnbhkvcMlFxfoOrfOWJWTEQQKiTtHQs5g==</InverseQ><D>AZpZP7VPjaU+VU3VaJjD3KN8+gGJFCQ+CtLC+pwYBskwtMHu5/vxtVmnlx0TgqrGhac4iBGUXIox+ZO8b1FgB63o+1ihdAefG7siXpsL5adO85hjuQs1XIpC63Fm2WMi8yYNnS8QB0v7G+CKdTtWDEkfpyUBB74Kb9bihEZ1AHE=</D></RSAKeyValue></string>
    <array name="publishmode">

        <item>设备</item>
        <item>账户</item>

    </array>
    <array name="subsribemode">
        <item>订阅单个设备($USR/DevTx/Id)</item>
        <item>取消单个订阅($USR/DevTx/Id)</item>
        <item>订阅账号下的全部设备($USR/Dev2App/帐号/+)</item>
        <item>取消订阅账号下的全部设备($USR/Dev2App/帐号/+)</item>
    </array>

    <array name="subsribemode_parse">
        <item>订阅指定设备JSON格式数据($USR/DevJsonTx/Id)</item>
        <item>取消订阅设备JSON格式数据($USR/DevJsonTx/Id)</item>
        <item>订阅账号下全部设备监控状态($USR/JsonTx/帐号/+)</item>
        <item>取消订阅账号下的全部设备监控状态($USR/JsonTx/帐号/+)</item>
    </array>

</resources>
